<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/study"
    tools:context=".StudyActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/color_radio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/PrimaryTextBlack">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/PrimaryYellow"
                android:src="@drawable/ic_return"
                android:transitionName="@string/floating_action_button_transition"
                app:backgroundTint="@color/PrimaryYellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="@color/material_on_primary_emphasis_high_type" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/wanna_change_color"
                android:textAlignment="center"
                android:textColor="@color/PrimaryYellow"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:fontFamily="@font/pt_mono"
                android:text="@string/hate_black"
                android:textColor="@color/PrimaryTextWhite"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/white_rb"
                android:textSize="36sp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:backgroundTint="@color/PrimaryTextWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/pink_rb"
                android:textSize="36sp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:backgroundTint="@color/PrimaryPink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/white" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/blue_rb"
                android:textSize="36sp"
                android:textColor="@color/PrimaryTextWhite"
                app:backgroundTint="@color/PrimaryBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pink" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/yellow_rb"
                android:textSize="36sp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                app:backgroundTint="@color/PrimaryYellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/edu_card"
                android:layout_width="330dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/PrimaryTextWhite">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/main_card_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/russo_one"
                        android:text="@string/start_education"
                        android:textAlignment="center"
                        android:textColor="@color/PrimaryTextBlack"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/secondary_card_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/pt_mono"
                        android:text="@string/start_education_message"
                        android:textAlignment="center"
                        android:textColor="@color/PrimaryTextBlack"
                        android:textSize="24sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/first_edu_button"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/PrimaryTextWhite">
                <TextView
                    android:id="@+id/first_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_mono"
                    android:layout_marginTop="25dp"
                    android:textAlignment="center"
                    android:textColor="@color/PrimaryTextBlack"
                    android:textSize="34sp"
                    android:text="@string/start"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/second_edu_button"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/PrimaryTextWhite">
                <TextView
                    android:id="@+id/second_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_mono"
                    android:layout_marginTop="25dp"
                    android:textAlignment="center"
                    android:textColor="@color/PrimaryTextBlack"
                    android:textSize="34sp"
                    android:text="@string/cancel"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/what_word_is_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/PrimaryTextWhite"
                android:layout_marginTop="25dp"
                android:text="@string/what_word_is_it"
                android:fontFamily="@font/pt_mono"
                android:textSize="20sp"/>

        </LinearLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:transitionName="@string/bottom_app_bar_transition"
            app:backgroundTint="@color/PrimaryPink"
            app:fabAlignmentMode="end"
            app:hideOnScroll="true"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/study_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_anchor="@id/bar"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/PrimaryYellow"
            android:src="@drawable/ic_cancel_black_24dp"
            android:transitionName="@string/floating_action_button_transition"
            app:backgroundTint="@color/PrimaryYellow"
            app:rippleColor="@color/material_on_primary_emphasis_high_type"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>