<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signinfon"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/hiTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:gravity="end"
        android:text="@string/register_text"
        android:textAlignment="textEnd"
        android:textColor="@color/PrimaryTextWhite"
        android:textSize="45sp"
        android:textStyle="normal"
        app:fontFamily="@font/russo_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:hint="@string/name_label"
        android:textSize="24sp"
        android:fontFamily="@font/pt_mono"
        android:textColorHint="@color/PrimaryTextWhite"
        app:boxStrokeColor="@color/PrimaryBlue"
        app:boxStrokeErrorColor="@color/PrimaryPink"
        app:hintTextColor="@color/PrimaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_mono"
            android:textColorHighlight="?attr/colorPrimary"
            android:textColorLink="@color/PrimaryBlue"
            android:textCursorDrawable="@color/PrimaryBlue"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:hint="@string/email_label"
        android:textSize="24sp"
        android:fontFamily="@font/pt_mono"
        android:textColorHint="@color/PrimaryTextWhite"
        app:boxStrokeColor="@color/PrimaryBlue"
        app:errorEnabled="true"
        app:boxStrokeErrorColor="@color/PrimaryPink"
        app:hintTextColor="@color/PrimaryBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_mono"
            android:textColorHighlight="?attr/colorPrimary"
            android:textColorLink="@color/PrimaryBlue"
            android:textCursorDrawable="@color/PrimaryBlue"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:hint="@string/password_label"
        android:textSize="24sp"
        android:fontFamily="@font/pt_mono"
        android:textColorHint="@color/PrimaryTextWhite"
        app:boxStrokeColor="@color/PrimaryBlue"
        app:endIconMode="password_toggle"
        app:boxStrokeErrorColor="@color/PrimaryPink"
        app:hintTextColor="@color/PrimaryBlue"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/PrimaryTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_mono"
            android:textColorHighlight="?attr/colorPrimary"
            android:inputType="textPassword"
            android:textColorLink="@color/PrimaryBlue"
            android:textCursorDrawable="@color/PrimaryBlue"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/register_button_text"
        android:textColor="@color/PrimaryTextWhite"
        android:textSize="22sp"
        app:backgroundTint="@color/empty"
        app:fontFamily="@font/russo_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:layout_constraintVertical_bias="0.036" />

</androidx.constraintlayout.widget.ConstraintLayout>